# cpp_hse_course

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  first_task.md  mychange.diff
cmake/: download_libtorch.cmake
data/e5/: traced_e5.pt
include/protogen/: neuro.pb.h
include/server/: client_handler.hpp  server.hpp
include/text_process/: neuro_predict.hpp
include/thread_pool/: thread_pool.hpp
libsrc/server/: client_handler.cpp  server.cpp
libsrc/text_process/: CMakeLists.txt
libsrc/text_process/src/: neuro_predict.cpp
libsrc/thread_pool/: thread_pool.cpp
projects/neurodaemon/: CMakeLists.txt
projects/neurodaemon/src/: main.cpp
projects/protogen/: CMakeLists.txt
projects/protogen/etc/: neuro.proto
projects/tcp_load/: obf_tcp_load_v1.0.py  obf_tcp_load_v1.1.py  obf_tcp_load_v1.2.py
report/: compare_report.md
scripts/simple_load/: client.py  generate_pb_data.py  generate_text_data.py  neuro_pb2.py  pb_data.txt  requirements.txt  text.txt  text_data.txt
tests/proto_test/: CMakeLists.txt
tests/proto_test/src/: proto_test.cpp
